--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Build
 
 on:
   push:
@@ -16,8 +16,6 @@ jobs:
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
-        # with:
-        #   cache: 'pnpm'
       
       - name: before_script
         run: |
