--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - lab9
       - main
+  pull_request:
+    branches:
+      - lab9
+      - main
+  workflow_dispatch:
 
 jobs:
   build-package:
@@ -29,9 +34,30 @@ jobs:
       - name: Build project
         run: pnpm build
 
+  artifact:
+    name: Upload Artifact
+    runs-on: ubuntu-latest
+    needs: build-package
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    steps:
       - name: Upload artifact
         id: upload-artifact
         uses: actions/upload-artifact@v4.6.2
         with:
           name: vue2048-build
           path: dist/
+
+  analyze:
+    name: Static Analysis
+    runs-on: ubuntu-latest
+    needs: build-package
+    if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
+    steps:
+      - name: Run type checking
+        run: pnpm type-check
+
+      - name: Run linter
+        run: pnpm lint
+
+      - name: Run quality
+        run: pnpm test
