--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,28 @@ on:
         default: 'true'
 
 jobs:
-  build-package:
-    name: Build Package
+  # build-package:
+  #   name: Build Package
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v3
+  #     - name: before_script
+  #       run: |
+  #         corepack enable
+  #         corepack prepare pnpm@latest-10 --activate
+  #         pnpm config set store-dir .pnpm-store
+  #     - name: Install dependencies
+  #       run: pnpm install
+  #     - name: Build project
+  #       run: pnpm build
+
+  artifact:
+    name: Upload Artifact
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -43,12 +62,6 @@ jobs:
       - name: Build project
         run: pnpm build
 
-  artifact:
-    name: Upload Artifact
-    runs-on: ubuntu-latest
-    needs: build-package
-    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-    steps:
       - name: Upload artifact
         id: upload-artifact
         uses: actions/upload-artifact@v4.6.2
@@ -59,9 +72,22 @@ jobs:
   analyze:
     name: Static Analysis
     runs-on: ubuntu-latest
-    needs: build-package
     if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+      - name: before_script
+        run: |
+          corepack enable
+          corepack prepare pnpm@latest-10 --activate
+          pnpm config set store-dir .pnpm-store
+      - name: Install dependencies
+        run: pnpm install
+      - name: Build project
+        run: pnpm build
+
       - name: Run type checking
         run: pnpm type-check
       - name: Run linter
