refactor(workflow): simplify event triggers by removing pull_request configuration

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -1,11 +1,6 @@
 name: CI/CD Checks
 
-on:
-  pull_request:
-    branches:
-      - lab9
-      - main
-  workflow_dispatch:
+on: workflow_dispatch
 
 jobs:
   quality-checks:
