--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,3 +80,47 @@ jobs:
         run: pnpm lint
       - name: Run quality
         run: pnpm test
+
+  # deploy_qa:
+  #   name: Deploy to QA
+  #   needs: [push_job, pull_request_job]
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: QA
+  #   if: github.event_name == 'workflow_dispatch'
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #     - name: Download artifact
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: vue2048-build
+  #         path: dist
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v3
+  #     - name: Install CLI
+  #       run: npm install -g @azure/static-web-apps-cli
+  #     - name: Deploy to QA
+  #       run: pnpx @azure/static-web-apps-cli deploy ./dist --app-name stapp-vue2048-qa --env=production
+
+  # deploy_production:
+  #   name: Deploy to Production
+  #   needs: [deploy_qa]
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: Prod
+  #   if: github.event_name == 'workflow_dispatch'
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #     - name: Download artifact
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: vue2048-build
+  #         path: dist
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v3
+  #     - name: Install CLI
+  #       run: npm install -g @azure/static-web-apps-cli
+  #     - name: Deploy to Production
+  #       run: pnpx @azure/static-web-apps-cli deploy ./dist --app-name stapp-vue2048-prod --env=production
