--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,28 +11,23 @@ on:
       - main
   workflow_dispatch:
     inputs:
-      build_project:
+      build_upload_artifact:
         type: boolean
-        description: 'Build the project'
-        required: true
-        default: true
-      upload_artifact:
+        description: 'Build and Upload the artifact'
+        required: false
+        default: false
+      build_run_analysis:
         type: boolean
-        description: 'Upload the artifact'
-        required: true
-        default: true
-      run_analysis:
-        type: boolean
-        description: 'Run static analysis'
-        required: true
-        default: true
+        description: 'Build and Run Analysis'
+        required: false
+        default: false
 
 
 jobs:
   push_job:
     name: Build and Upload
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event.inputs.build_upload_artifact == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -58,7 +53,7 @@ jobs:
   pull_request_job:
     name: Pull Request Checks
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event.inputs.build_run_analysis == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
