fix(workflow): remove unnecessary workflow_dispatch condition from jobs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
   push_job:
     name: Build and Upload
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event.inputs.build_upload_artifact == 'true'
+    if: github.event_name == 'push' || github.event.inputs.build_upload_artifact == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -53,7 +53,7 @@ jobs:
   pull_request_job:
     name: Pull Request Checks
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event.inputs.build_run_analysis == 'true'
+    if: github.event_name == 'pull_request' || github.event.inputs.build_run_analysis == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
