feat(workflow): add deploy inputs for QA and Production in workflow_dispatch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,16 @@ on:
         description: 'Build and Run Analysis'
         required: false
         default: false
+      deploy_qa:
+        type: boolean
+        description: 'Deploy to QA'
+        required: false
+        default: false
+      deploy_production:
+        type: boolean
+        description: 'Deploy to Production'
+        required: false
+        default: false
 
 
 jobs:
@@ -84,7 +94,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: QA
-    if: github.event_name == 'workflow_dispatch'
+    if: github.event.inputs.deploy_qa == 'true' 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -106,7 +116,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: Prod
-    if: github.event_name == 'workflow_dispatch'
+    if: github.event.inputs.deploy_production == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
