--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,8 +80,6 @@ jobs:
           pnpm config set store-dir .pnpm-store
       - name: Install dependencies
         run: pnpm install
-      # - name: Build project
-      #   run: pnpm build
       
       - name: Download artifact
         uses: actions/download-artifact@v4
@@ -105,20 +103,20 @@ jobs:
       name: QA
     if: github.event.inputs.deploy_qa == 'true' 
     steps:
-      # - name: Checkout code
-      #   uses: actions/checkout@v4
-      # - name: Set up Node.js
-      #   uses: actions/setup-node@v3
-      # - name: before_script
-      #   run: |
-      #     corepack enable
-      #     corepack prepare pnpm@latest-10 --activate
-      #     pnpm config set store-dir .pnpm-store
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+      - name: before_script
+        run: |
+          corepack enable
+          corepack prepare pnpm@latest-10 --activate
+          pnpm config set store-dir .pnpm-store
       # - name: Run pnpm setup
       #   run: pnpm setup
+      - name: Install dependencies
+        run: pnpm install
 
-      # - name: Checkout code
-      #   uses: actions/checkout@v4
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
