--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ env:
 
 jobs:
   push_job:
-    name: Build and Upload
+    name: Upload
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event.inputs.build_upload_artifact == 'true'
     steps:
@@ -65,7 +65,6 @@ jobs:
 
   pull_request_job:
     name: Pull Request Checks
-    needs: [push_job]
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' || github.event.inputs.build_run_analysis == 'true'
     steps:
@@ -97,7 +96,7 @@ jobs:
 
   deploy_qa:
     name: Deploy to QA
-    needs: [push_job, pull_request_job]
+    needs: [pull_request_job]
     runs-on: ubuntu-latest
     environment:
       name: QA
@@ -116,16 +115,14 @@ jobs:
       #   run: pnpm setup
       - name: Install dependencies
         run: pnpm install
+      # - name: Install CLI
+      #   run: pnpm install -g @azure/static-web-apps-cli
 
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: vue2048-build
           path: dist/
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-      - name: Install CLI
-        run: pnpm install -g @azure/static-web-apps-cli
       # - name: Deploy to QA
       #   uses: Azure/static-web-apps-deploy@v1
       #   with:
