--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ env:
 
 jobs:
   push_job:
-    name: Upload
+    name: Build and Upload
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event.inputs.build_upload_artifact == 'true'
     steps:
@@ -64,8 +64,9 @@ jobs:
           path: dist/
 
   pull_request_job:
-    name: Pull Request Checks
+    name: Pull Request Analysis
     runs-on: ubuntu-latest
+    needs: [push_job]
     if: github.event_name == 'pull_request' || github.event.inputs.build_run_analysis == 'true'
     steps:
       - name: Checkout code
