--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -131,7 +131,7 @@ jobs:
       #     azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_QA }}
       #     action: upload
       - name: Deploy to QA
-        run: pnpx @azure/static-web-apps-cli deploy ./dist --app-name stapp-vue2048-qa --env=production
+        run: pnpx @azure/static-web-apps-cli deploy ./dist --app-name stapp-vue2048-qa --env=qa
 
   deploy_production:
     name: Deploy to Production
