--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,24 +112,13 @@ jobs:
           corepack enable
           corepack prepare pnpm@latest-10 --activate
           pnpm config set store-dir .pnpm-store
-      # - name: Run pnpm setup
-      #   run: pnpm setup
       - name: Install dependencies
         run: pnpm install
-      # - name: Install CLI
-      #   run: pnpm install -g @azure/static-web-apps-cli
-
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: vue2048-build
           path: dist/
-      # - name: Deploy to QA
-      #   uses: Azure/static-web-apps-deploy@v1
-      #   with:
-      #     app_location: ./dist
-      #     azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_QA }}
-      #     action: upload
       - name: Deploy to QA
         run: pnpx @azure/static-web-apps-cli deploy ./dist --app-name stapp-vue2048-qa --env=production --deployment-token ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_QA }}
 
@@ -150,19 +139,14 @@ jobs:
           corepack enable
           corepack prepare pnpm@latest-10 --activate
           pnpm config set store-dir .pnpm-store
-      - name: Run pnpm setup
-        run: pnpm setup
-
-      # - name: Checkout code
-      #   uses: actions/checkout@v4
+      - name: Install dependencies
+        run: pnpm install
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: vue2048-build
-          path: dist
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-      - name: Install CLI
-        run: pnpm install -g @azure/static-web-apps-cli
+          path: dist/
+      # - name: Install CLI
+      #   run: pnpm install -g @azure/static-web-apps-cli
       - name: Deploy to Production
-        run: pnpx @azure/static-web-apps-cli deploy ./dist --app-name stapp-vue2048-prod --env=production
+        run: pnpx @azure/static-web-apps-cli deploy ./dist --app-name stapp-vue2048-prod --env=production --deployment-token ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_PROD }}
