--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,20 +5,24 @@ on:
     branches:
       - lab9
       - main
+    paths-ignore:
+      - 'docs/**'
   pull_request:
     branches:
       - lab9
       - main
+    paths-ignore:
+      - 'docs/**'
   workflow_dispatch:
     inputs:
-      build_upload_artifact:
+      run_analysis:
         type: boolean
-        description: 'Build and Upload the artifact'
-        required: true
-        default: true
-      build_run_analysis:
+        description: 'Run Analysis'
+        required: false
+        default: false
+      run_tests:
         type: boolean
-        description: 'Build and Run Analysis'
+        description: 'Run Tests'
         required: false
         default: false
       deploy_qa:
@@ -31,6 +35,8 @@ on:
         description: 'Deploy to Production'
         required: false
         default: false
+  schedule:
+    - cron: '0 8 * * MON'
 
 env:
   SHELL: /bin/bash
@@ -40,7 +46,7 @@ jobs:
   push_job:
     name: Build and Upload
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event.inputs.build_upload_artifact == 'true'
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -62,12 +68,13 @@ jobs:
         with:
           name: vue2048-build
           path: dist/
+          retention-days: ${{ github.ref == 'refs/heads/main' && 7 || 1 }}
 
   pull_request_job:
     name: Pull Request Analysis
     runs-on: ubuntu-latest
     needs: [push_job]
-    if: github.event_name == 'pull_request' || github.event.inputs.build_run_analysis == 'true'
+    if: github.event_name == 'pull_request' || github.event.inputs.run_analysis == 'true' || github.event.inputs.run_tests == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -87,12 +94,17 @@ jobs:
           name: vue2048-build
           path: dist/
       - name: Run type checking
+        if: github.event_name == 'pull_request' || github.event.inputs.run_analysis == 'true'
         run: pnpm type-check
       - name: Fix linting issues
+        if: github.event_name == 'pull_request' || github.event.inputs.run_analysis == 'true'
         run: pnpm lint --fix
       - name: Run linter
+        if: github.event_name == 'pull_request' || github.event.inputs.run_analysis == 'true'
         run: pnpm lint
-      - name: Run quality
+
+      - name: Run unit tests
+        if: github.event_name == 'pull_request' || github.event.inputs.run_tests == 'true'
         run: pnpm test
 
   deploy_qa:
@@ -146,7 +158,5 @@ jobs:
         with:
           name: vue2048-build
           path: dist/
-      # - name: Install CLI
-      #   run: pnpm install -g @azure/static-web-apps-cli
       - name: Deploy to Production
         run: pnpx @azure/static-web-apps-cli deploy ./dist --app-name stapp-vue2048-prod --env=production --deployment-token ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
