--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,7 +109,7 @@ jobs:
 
   deploy_qa:
     name: Deploy to QA
-    needs: [pull_request_job]
+    needs: [push_job]
     runs-on: ubuntu-latest
     environment:
       name: QA
@@ -136,7 +136,7 @@ jobs:
 
   deploy_production:
     name: Deploy to Production
-    needs: [deploy_qa]
+    needs: [push_job]
     runs-on: ubuntu-latest
     environment:
       name: Prod
