fix(workflow): comment out unused environment variables in build configuration

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,9 +38,9 @@ on:
   schedule:
     - cron: '0 8 * * MON'
 
-env:
-  SHELL: /bin/bash
-  PNPM_HOME: /usr/local/bin
+# env:
+#   SHELL: /bin/bash
+#   PNPM_HOME: /usr/local/bin
 
 jobs:
   push_job:
